--- a/client/src/main/res/values/strings.xml
+++ b/client/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <resources>
   <string name="app_name">github-client</string>
-  <string name="title_activity_user_detail">UserDetailActivity</string>
   <string name="user_detail_joined_template">  Joined on %s</string>
   <string name="repos_popular">Popular repositories</string>
   <string name="repos_contributed">Contributed repositories</string>
+  <string name="repo_detail_language_used_template">Language: %s</string>
+  <string name="repo_detail_issues_template">Issues Count: %s</string>
 </resources>
